# secondhand-platform

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.omo/run-continuation/: ses_12be2be3cffeBBnATy1THbVbeM.json
.trellis/: .template-hashes.json
.trellis/spec/backend/: index.md  (+5 more)
backend/: conftest.py
backend/api/: __init__.py  exceptions.py  mixins.py  pagination.py  throttles.py  urls.py  views.py
backend/catalog/: admin.py  cache.py  constants.py  filters.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
backend/config/: api_exceptions.py  asgi.py  tests.py  urls.py
backend/interactions/: admin.py  models.py  selectors.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/messaging/: admin.py  apps.py  consumers.py  selectors.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/notifications/: __init__.py  admin.py  apps.py  consumers.py  models.py  realtime.py  routing.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/orders/: admin.py  filters.py  models.py  selectors.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
backend/users/: apps.py  auth_backends.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
docs/: redis-cache-channels-messaging-review.md
frontend/: .env.development  .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
performance/: README.md  locustfile.py  run_performance_test.ps1  一键性能测试说明.md
(+296 files in other folders)
