[project]
name = "secondhand-platform"
version = "0.1.0"
description = "一个基于django的二手交易平台"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels[daphne]>=4,<5",
    "channels-redis>=4,<5",
    "django>=6.0,<6.1",
    "django-environ>=0.13.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.3",
    "whitenoise>=6.12.0",
    "celery[redis]>=5.6,<5.7",
    "djangorestframework>=3.17.1",
    "django-filter>=25.2",
    "django-cors-headers>=4.9.0",
    "djangorestframework-simplejwt>=5.5.1",
]

[dependency-groups]
dev = [
    "locust>=2.40,<3",
    "pytest>=9,<10",
    "pytest-asyncio>=1.4.0",
    "pytest-django>=4.11,<5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
pythonpath = ["backend"]
testpaths = ["backend"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*", "*Test"]
asyncio_mode = "auto"
addopts = "-ra"
